# forecast-a1

./: 01_financial_phrasebank.ipynb  02_acled_notes.ipynb  03_panel_forecasting.ipynb  BSE_Forecasting_In_Class_Assignment.md  PIPELINE_REFERENCE.md  STATUS.md  pyproject.toml
.claude/: settings.local.json
class/: session_2.ipynb  session_3.ipynb
data/: GDP (1).xlsx  Stock Markets (1).xlsx  Terms of Trade.xlsx  debt2gdp (1).xlsx  final_panel_data.csv  predictions.csv  ucdp.csv
data/acled_notes/: acled_spain.parquet  acled_sudan.parquet
data/controls/: 10y_bond_yields (1).xlsx  CPI (2).xlsx  ER (1).xlsx  Industrial Production (1).xlsx
data/financial_phrasebank/: test.parquet  train.parquet  validation.parquet
data/synthetic_panel/: synthetic_panel_features.csv  synthetic_panel_headlines.csv
docs/: Exam_Prep_Study_Guide.docx  ~$am_Prep_Study_Guide.docx
notebooks/: Initial Attempt Forecasting with Text.fixed.ipynb  checking macro vars.ipynb  clean.ipynb  evaluate.ipynb  explore.ipynb  final.ipynb
notebooks/archive/: Initial Attempt Forecasting with Text.fixed.ipynb  Initial Attempt Forecasting with Text.ipynb  evaluate.ipynb  explore.ipynb
