[project]
name = "forecast-a1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "finance>=0.2502",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "panelsplit>=2.1.1",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setfit>=1.1.3",
    "wbgapi>=1.0.14",
    "xgboost>=3.2.0",
    "yfinance>=0.2.66",
]
